num left menu z-index fix

--- a/css/liLanding.css
+++ b/css/liLanding.css
@@ -114,7 +114,7 @@ html {
 	margin-top:auto;
 	margin-bottom: auto;
 	left:69px;
-	z-index:999;
+	z-index:9999;
 }
 .landingDotted ul {
 	padding:0;
